--- a/src/components/organisms/PartnersSlider/PartnersSlider.module.css
+++ b/src/components/organisms/PartnersSlider/PartnersSlider.module.css
@@ -6,7 +6,9 @@
 .partnersSection {
     width: 100%;
     padding: 100px 20px;
-    background: linear-gradient(180deg, rgba(238, 53, 20, 0.05), rgba(255, 255, 255, 0));
+    background: linear-gradient(180deg,
+            rgba(238, 53, 20, 0.05),
+            rgba(255, 255, 255, 0));
     display: flex;
     justify-content: center;
     overflow: hidden;
@@ -19,8 +21,16 @@
     overflow: hidden;
     position: relative;
     border-radius: 14px;
-    -webkit-mask-image: linear-gradient(90deg, transparent 0%, black 10%, black 90%, transparent 100%);
-    mask-image: linear-gradient(90deg, transparent 0%, black 10%, black 90%, transparent 100%);
+    -webkit-mask-image: linear-gradient(90deg,
+            transparent 0%,
+            black 10%,
+            black 90%,
+            transparent 100%);
+    mask-image: linear-gradient(90deg,
+            transparent 0%,
+            black 10%,
+            black 90%,
+            transparent 100%);
 }
 
 /* TRACK */
